# localbridge

./: .gitignore  README.md  build.js  package-lock.json  package.json  vercel.json
landing/: index.html
pwa/: app.js  gsap.js  index.html  jsQR.js  manifest.json  style.css  sw.js  three.js
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  files.rs  main.rs  network.rs  qr.rs  server.rs  transfer.rs
