[package]
name = "localbridge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "localbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
tokio-util = { version = "0.7", features = ["io"] }
qrcode = "0.14"
image = "0.25"
sysinfo = "0.30"
uuid = { version = "1.7", features = ["v4"] }
futures = "0.3"
base64 = "0.22"
chrono = "0.4"
dirs = "5.0"
local-ip-address = "0.6"
rand = "0.8"
